tests/fixtures/invalid/pow_list_list_set.py
# Cannot call pow() with List[int], List[int], Set[int]
x = pow([1, 2, 3], [1, 2, 3], {1, 2, 3})
